Realigned buttons, fixed date and added swagger to the Webpack proxy

--- a/src/frontend/css/style.css
+++ b/src/frontend/css/style.css
@@ -94,5 +94,5 @@
 .middle {
     display: flex;
     align-items: center;
-    /*justify-content: center;*/
+    justify-content: center;
 }
